errors.txt
Main.java:3: error: package com.google.cloud.firestore does not exist
import com.google.cloud.firestore.Firestore;
                                 ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:3: error: package com.google.auth.oauth2 does not exist
import com.google.auth.oauth2.GoogleCredentials;
                             ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:4: error: package com.google.cloud.firestore does not exist
import com.google.cloud.firestore.Firestore;
                                 ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:5: error: package com.google.firebase does not exist
import com.google.firebase.FirebaseApp;
                          ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:6: error: package com.google.firebase does not exist
import com.google.firebase.FirebaseOptions;
                          ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:7: error: package com.google.firebase.cloud does not exist
import com.google.firebase.cloud.FirestoreClient;
                                ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:8: error: package org.springframework.context.annotation does not exist
import org.springframework.context.annotation.Bean;
                                             ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:9: error: package org.springframework.context.annotation does not exist
import org.springframework.context.annotation.Configuration;
                                             ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:11: error: package javax.annotation does not exist
import javax.annotation.PostConstruct;
                       ^
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:15: error: cannot find symbol
@Configuration
 ^
  symbol: class Configuration
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:18: error: cannot find symbol
    private Firestore firestore;
            ^
  symbol:   class Firestore
  location: class FirebaseConfig
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:37: error: cannot find symbol
    public Firestore getFirestore() {
           ^
  symbol:   class Firestore
  location: class FirebaseConfig
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:20: error: cannot find symbol
    @PostConstruct
     ^
  symbol:   class PostConstruct
  location: class FirebaseConfig
/Users/evanwee/SCHOOL/year2/objects/year2/bankingsystem/src/main/java/com/github/novabank/FirebaseConfig.java:36: error: cannot find symbol
    @Bean
     ^
  symbol:   class Bean
  location: class FirebaseConfig
Main.java:33: error: cannot find symbol
            Firestore db = firebaseConfig.getFirestore();
            ^
  symbol:   class Firestore
  location: class Main
15 errors
error: compilation failed